Current work DataPipeline.ipynb

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
     "# Removing rows with missing values\n",
     "\n",
     "# List of columns to check for missing values\n",
-    "columns_to_check = ['ec (cm3)', 'ep (KW)', 'Mt', 'm (kg)', 'Fm', 'Ft']\n",
+    "columns_to_check = ['ec (cm3)', 'ep (KW)', 'Mt', 'm (kg)', 'Fm', 'Ft', 'Fuel consumption ', 'Ewltp (g/km)']\n",
     "\n",
     "# Remove rows with missing values in specified columns\n",
     "df_reg = df_reg.dropna(subset=columns_to_check)"
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1301,29 +1301,29 @@
      "output_type": "stream",
      "text": [
       "                  Data Type  Unique Values  Missing Values (%)\n",
-      "Fuel consumption    float32            NaN           60.491448\n",
-      "Ewltp (g/km)        float32            NaN            1.273413\n",
-      "At1 (mm)            float32            NaN            0.000000\n",
-      "At2 (mm)            float32            NaN            0.000000\n",
-      "Country            category           28.0            0.000000\n",
-      "Fm                 category            6.0            0.000000\n",
-      "Ft                 category            9.0            0.000000\n",
-      "Mh                 category          108.0            0.000000\n",
-      "Mt                  float32            NaN            0.000000\n",
-      "W (mm)              float32            NaN            0.000000\n",
-      "ec (cm3)            float32            NaN            0.000000\n",
-      "ep (KW)             float32            NaN            0.000000\n",
-      "m (kg)              float32            NaN            0.000000\n",
-      "year                float32            NaN            0.000000\n"
+      "Country            category             26                 0.0\n",
+      "Mh                 category             82                 0.0\n",
+      "m (kg)              float32           2063                 0.0\n",
+      "Mt                  float32           2191                 0.0\n",
+      "Ewltp (g/km)        float32            400                 0.0\n",
+      "W (mm)              float32            662                 0.0\n",
+      "At1 (mm)            float32           1301                 0.0\n",
+      "At2 (mm)            float32           1303                 0.0\n",
+      "Ft                 category              7                 0.0\n",
+      "Fm                 category              5                 0.0\n",
+      "ec (cm3)            float32            166                 0.0\n",
+      "ep (KW)             float32            291                 0.0\n",
+      "year                float32              3                 0.0\n",
+      "Fuel consumption    float32            372                 0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(9720493, 14)"
+       "(3838945, 14)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
     "data_types = df_reg.dtypes\n",
     "\n",
     "# Get the number of unique values for each categorical column\n",
-    "unique_values = df_reg.select_dtypes(include=['int64', 'float64', 'object', 'category', 'bool']).nunique()\n",
+    "unique_values = df_reg.select_dtypes(include=['int64', 'float64', 'float32','object', 'category', 'bool']).nunique()\n",
     "\n",
     "# Get the percentage of missing values for each column\n",
     "missing_values = df_reg.isnull().mean() * 100\n",
@@ -1356,13 +1356,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Assuming df_reg_cleaned is your cleaned DataFrame\n",
-    "categorical_cols = ['Fm', 'Ft']  # Add all categorical columns here\n",
+    "Now that some columns were removed and missing values have been dealt with, let's check categorical columns for unique values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in 'Fm': ['M', 'P', 'B', 'H', 'F']\n",
+      "Unique values in 'Ft': ['PETROL', 'DIESEL', 'PETROL/ELECTRIC', 'LPG', 'DIESEL/ELECTRIC', 'NG-BIOMETHANE', 'E85']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From df_reg\n",
+    "categorical_cols = ['Fm', 'Ft']  \n",
+    "\n",
+    "# Loop through each categorical column and print unique values\n",
+    "for col in categorical_cols:\n",
+    "    unique_values = df_reg[col].unique()\n",
+    "    print(f\"Unique values in '{col}': {list(unique_values)}\")\n",
+    "\n",
+    "# Meaning Ft\n",
+    "\n",
+    "# E85: an ethanol fuel blend of 85% ethanol fuel and 15% gasoline or other hydrocarbon by volume\n",
+    "# LPG: liquified petroleum gas\n",
+    "# NG: Natural Gas\n",
+    "\n",
+    "# Meaning Fm\n",
+    "# M = Monofuel\n",
+    "# P = Off vehicle charging hybrid electric vehicles\n",
+    "# B = Bi-fuel vehicles (two separate fuel storage systems)\n",
+    "# H = Not-off vehicle charging hybrid vehicles\n",
+    "# F = Flex-fuel vehicles\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in 'Country': ['DE', 'PL', 'FR', 'BE', 'IE', 'NO', 'HR', 'LV', 'IT', 'CZ', 'SI', 'EE', 'BG', 'ES', 'HU', 'NL', 'FI', 'LT', 'AT', 'LU', 'PT', 'SK', 'SE', 'IS', 'MT', 'GR']\n",
+      "Unique values in 'Mh': ['PSA', 'AA-IVA', 'AUDI AG', 'RENAULT', 'SKODA', 'FORD WERKE GMBH', 'TOYOTA', 'BMW AG', 'HYUNDAI', 'MAZDA', 'SEAT', 'HYUNDAI CZECH', 'KIA SLOVAKIA', 'AUTOMOBILES PEUGEOT', 'VOLKSWAGEN', 'VOLVO', 'MAGYAR SUZUKI', 'FIAT GROUP', 'KIA', 'SUZUKI MOTOR CORPORATION', 'NISSAN', 'AUDI SPORT', 'AUTOMOBILES CITROEN', 'MERCEDES-BENZ AG', 'ALFA ROMEO', 'DACIA', 'JAGUAR LAND ROVER LIMITED', 'HONDA MOTOR CO', 'MITSUBISHI MOTORS THAILAND', 'OPEL AUTOMOBILE', 'MITSUBISHI MOTORS CORPORATION', 'HYUNDAI ASSAN', 'BMW GMBH', 'PORSCHE', 'CHRYSLER', 'SUBARU', 'FORD MOTOR COMPANY', 'SSANGYONG', 'MAZDA EUROPE', 'BENTLEY', 'DUPLICATE', 'MCLAREN', 'MASERATI', 'LAMBORGHINI', 'ALPINA', 'ALPINE', 'MERCEDES AMG', 'FERRARI', 'ROLLS ROYCE', 'ASTON MARTIN', 'AA-NSS', 'DFSK', 'LOTUS', 'AUDI HUNGARIA', 'CATERHAM', 'NISSAN AUTOMOTIVE EUROPE', 'CNG TECHNIK', 'SAIC MOTOR CORPORATION', 'MORGAN', 'GEELY', 'GENERAL MOTORS HOLDINGS', 'LEVC', 'BUGATTI', 'FORD MOTOR AUSTRALIA', 'RENAULT TRUCKS', 'MAN', 'TOYOTA MOTOR CORPORATION', 'OUT OF SCOPE', 'SECMA', 'ROLLS-ROYCE', 'DR AUTOMOBILES', 'DALLARA', 'DONKERVOORT', 'STELLANTIS AUTO', 'STELLANTIS EUROPE', 'KG MOBILITY', 'INEOS', 'KTM', 'GREAT WALL MOTOR', 'UNKNOWN', 'BRILLIANCE SHINERAY', 'IVECO']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From df_reg\n",
+    "categorical_cols = ['Country', 'Mh']  \n",
     "\n",
     "# Loop through each categorical column and print unique values\n",
     "for col in categorical_cols:\n",
@@ -1376,43 +1429,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Renaming cat variable : Ft (Fuel type)\n",
-    "\n",
-    "# Define the mapping for standardization\n",
-    "mapping = {\n",
-    "    'DIESEL': 'diesel',\n",
-    "    'diesel': 'diesel',\n",
-    "    'Gasoline': 'gasoline',\n",
-    "    'GASOLINE': 'gasoline',\n",
-    "    'petrol': 'gasoline',\n",
-    "    'PETROL': 'gasoline',\n",
-    "    'ELECTRIC':'electric',\n",
-    "    'hybrid': 'hybrid',\n",
-    "    'HYBRID': 'hybrid',\n",
-    "    'CNG': 'cng',\n",
-    "    'LPG': 'lpg',\n",
-    "    'Ethanol': 'ethanol',\n",
-    "    'PETROL/ELECTRIC':'gasoline/electric',\n",
-    "    'E85': 'ethanol',\n",
-    "    'e85' : 'ethanol',\n",
-    "    'ng' : 'natural gas',\n",
-    "    'NG' : 'natural gas',\n",
-    "    'NG-BIOMETHANE' : 'natural gas/biomethane',\n",
-    "    'ng-biomethane' : 'natural gas/biomethane',\n",
-    "    'DIESEL/ELECTRIC' : 'diesel/electric',\n",
-    "    'HYDROGEN' : 'hydrogen',\n",
-    "    'lpg' : 'liquefied petroleum gas',\n",
-    "    'petrol/electric': 'gasoline/electric'\n",
-    "    # Add any other mappings as needed\n",
-    "}\n",
-    "\n",
-    "# Apply the mapping to the 'Ft' column\n",
-    "df_reg['Ft'] = df_reg['Ft'].replace(mapping)\n",
-    "\n",
-    "# Check the unique values after mapping\n",
-    "df_reg = df_reg['Ft'].unique()\n",
-    "print(\"Unique Ft after mapping:\", df_reg)"
+    "# Let's handle first countries"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
