Current work DataPipeline.ipynb

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,8 @@
       "Country                category           30.0            0.000000\n",
       "r                       float32            NaN            0.000000\n",
       "year                    float32            NaN            0.000000\n",
-      "#identical occurences   float32            NaN            0.000000\n"
+      "#identical occurences   float32            NaN            0.000000\n",
+      "(11473813, 41)\n"
      ]
     }
    ],
@@ -1159,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1234,7 @@
        "(11473813, 14)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1324,7 @@
        "(3838945, 14)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1548,7 @@
        "(3111097, 14)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,9 +1592,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_11052\\3086648816.py:46: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "  df_regC['Mh'] = df_regC['Mh'].replace(automaker_mapping)\n",
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_11052\\3086648816.py:46: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_regC['Mh'] = df_regC['Mh'].replace(automaker_mapping)\n"
+     ]
+    }
+   ],
    "source": [
     "# Mapping\n",
     "\n",
@@ -1645,9 +1661,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_11052\\2782229607.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  unmapped_automakers = df_regC[~df['Mh'].isin(automaker_mapping.values())]['Mh'].unique()\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1666,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1723,10 +1747,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3111097, 14)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Now let's check their importance. Which automakers form 80% of the Data\n",
+    "# Now let's check the importance of the automakers that form 80% of the Data\n",
     "# Calculate the frequency of each country\n",
     "\n",
     "automaker_counts = df_regC['Mh'].value_counts().head(30)\n",
@@ -1753,12 +1787,24 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "#We can retain the am forming 80% of the data and drop the rest. Thereby reducing significantly the number of extra columns that encoding will produce"
+    "#We can retain the am forming 80% of the data and drop the rest. Thereby reducing significantly the number of extra columns that encoding will produce\n",
+    "\n",
+    "df_regC.shape"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the filtered DataFrame: (2509130, 14)\n"
+     ]
+    }
+   ],
    "source": [
     "# We retain the first 8\n",
     "\n",
@@ -1766,42 +1812,83 @@
     "automakers_to_keep = ['VOLKSWAGEN', 'BMW', 'mercedes', 'audi', 'SKODA', 'SEAT', 'RENAULT', 'ford']\n",
     "\n",
     "# Filter the DataFrame to retain only rows where 'Country' is in the list of countries_to_keep\n",
-    "df_regCA = df_regC[df_regC['Country'].isin(automakers_to_keep)]\n",
+    "df_regCA = df_regC[df_regC['Mh'].isin(automakers_to_keep)]\n",
     "\n",
     "# Check the shape of the filtered DataFrame to ensure the filtering worked\n",
     "print(\"Shape of the filtered DataFrame:\", df_regCA.shape)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Data Type  Unique Values  Missing Values (%)\n",
+      "Country            category              6                 0.0\n",
+      "Mh                 category              8                 0.0\n",
+      "m (kg)              float32           1902                 0.0\n",
+      "Mt                  float32           2023                 0.0\n",
+      "Ewltp (g/km)        float32            347                 0.0\n",
+      "W (mm)              float32            371                 0.0\n",
+      "At1 (mm)            float32            786                 0.0\n",
+      "At2 (mm)            float32            788                 0.0\n",
+      "Ft                 category              7                 0.0\n",
+      "Fm                 category              5                 0.0\n",
+      "ec (cm3)            float32             56                 0.0\n",
+      "ep (KW)             float32            151                 0.0\n",
+      "year                float32              3                 0.0\n",
+      "Fuel consumption    float32            195                 0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2509130, 14)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check that changes were done via summary\n",
     "\n",
     "# Get the data types of each column\n",
-    "data_types = df_regC.dtypes\n",
+    "data_types = df_regCA.dtypes\n",
     "\n",
     "# Get the number of unique values for each categorical column\n",
-    "unique_values = df_regC.select_dtypes(include=['int64', 'float64', 'float32','object', 'category', 'bool']).nunique()\n",
+    "unique_values = df_regCA.select_dtypes(include=['int64', 'float64', 'float32','object', 'category', 'bool']).nunique()\n",
     "\n",
     "# Get the percentage of missing values for each column\n",
-    "missing_values = df_regC.isnull().mean() * 100\n",
+    "missing_values = df_regCA.isnull().mean() * 100\n",
     "\n",
     "# Combine the information into a DataFrame\n",
-    "summary_df_regC = pd.DataFrame({\n",
+    "summary_df_regCA = pd.DataFrame({\n",
     "    'Data Type': data_types,\n",
     "    'Unique Values': unique_values,\n",
     "    'Missing Values (%)': missing_values\n",
     "})\n",
     "\n",
     "# Sort the summary DataFrame by the percentage of missing values in descending order\n",
-    "summary_df_regC = summary_df_regC.sort_values(by='Missing Values (%)', ascending=False)\n",
+    "summary_df_regCA = summary_df_regCA.sort_values(by='Missing Values (%)', ascending=False)\n",
     "\n",
     "# Print the summary DataFrame\n",
-    "print(summary_df_regC)\n",
+    "print(summary_df_regCA)\n",
     "\n",
     "# Show the shape of the original DataFrame\n",
-    "df_regC.shape"
+    "df_regCA.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final preprocessing to run a linear regression model"
    ]
   },
   {
@@ -1809,7 +1896,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Outlier handling of numerical variables (just done here as Decision Trees and Decision Forrests, are less sensitive to them)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1820,7 +1911,7 @@
     "# Encoding, separation of target, train_test split, finally scaler\n",
     "\n",
     "# Identify categorical and numerical columns\n",
-    "categorical_cols = ['Fm', 'Ft']\n",
+    "categorical_cols = ['Country', 'Mh', 'Fm', 'Ft']\n",
     "numerical_cols = df_reg.select_dtypes(include=['float32']).columns.tolist()\n",
     "\n",
     "# Step 1: Encode categorical variables\n",
