category cleaning into main notebook

--- a/notebooks/Andreas/EU Data_merge all years.ipynb
+++ b/notebooks/Andreas/EU Data_merge all years.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import and I/O"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge all years"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -165,6 +179,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## save"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -172,6 +194,13 @@
    "source": [
     "# Save merged Dataframe\n",
     "EU_df.to_parquet(\"..\\Data\\EU\\EU all.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimize dtypes"
    ]
   },
   {
@@ -282,6 +311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## save/read"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -298,6 +334,13 @@
    "outputs": [],
    "source": [
     "df = pd.read_parquet(\"..\\..\\data\\EU\\EU all_dtypes.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean Tan"
    ]
   },
   {
@@ -467,6 +510,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Treat NaN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check missing/NAN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -599,6 +656,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## convert missing and dtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -726,7 +790,7 @@
     "    df[col] = df[col].astype('float32')\n",
     "    print(f\"Column '{col}' converted to float32.\")\n",
     "    \n",
-    "# For 'ID' and 'year', handle missing values appropriately without changing the data type\n",
+    "# For 'ID' and 'year', handle missing values appropriately and convert to Int64 data type\n",
     "for col in ['ID', 'year']:\n",
     "    df[col] = df[col].replace(-99, np.nan)\n",
     "    # If you need to handle NaN in integer columns, convert to pandas nullable integer type\n",
@@ -773,6 +837,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## save/read"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -785,7 +856,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EU_df = pd.read_parquet(\"..\\..\\data\\EU\\EU all_dtypes_Tan_NaN_float32_Int64.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## None, NaN, NA sandbox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## f: identify_nan_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's np.nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "\n",
+    "def identify_nan_value(value):\n",
+    "    # Check if it's a string that looks like \"nan\" or \"None\"\n",
+    "    if isinstance(value, str):\n",
+    "        if value == 'nan':\n",
+    "            return \"It's a string 'nan'\"\n",
+    "        elif value == 'None':\n",
+    "            return \"It's a string 'None'\"\n",
+    "        else:\n",
+    "            return f\"It's a regular string: {value}\"\n",
+    "    \n",
+    "    # Check for pd.NA (specific pandas type)\n",
+    "    elif type(value) == pd._libs.missing.NAType:\n",
+    "        return \"It's pd.NA\"\n",
+    "    \n",
+    "    # Check for None (Python's NoneType)\n",
+    "    elif value is None:\n",
+    "        return \"It's None\"\n",
+    "    \n",
+    "    # Check for np.nan or float('nan')\n",
+    "    elif isinstance(value, float) and math.isnan(value):\n",
+    "        return \"It's np.nan\"\n",
+    "    \n",
+    "    else:\n",
+    "        return f\"It's another value: {value}\"\n",
+    "\n",
+    "# Example usage\n",
+    "value = df.MMS.iloc[2]\n",
+    "result = identify_nan_value(value)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.MMS.iloc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.MMS.iloc[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    NaN\n",
+       "1    NaN\n",
+       "2    NaN\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "Name: VFN, dtype: category\n",
+       "Categories (29048, object): [' IP-02-VF7-2018-7220 ', ' IP-24-WBA-2017-4112', ' IP-24-WBA-2017-4139', ' IP-24-WBA-2017-4142', ..., 'ÎP202_2411-W1K-1', 'Î™P-e3-1C4-2018-0013', 'Î™P-e3-1C4-2018-0015', 'ÏP-C519_2019_00007-WF0-1']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.VFN.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.VFN.iloc[0], type(df.VFN.iloc[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.VFN.iloc[0] = pd.NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.VFN.iloc[0], type(df.VFN.iloc[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"It's np.nan\""
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "identify_nan_value(df.VFN.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame({'num': [1,2,3,4],\n",
+    "                    'string': ['A','B','C','D'],\n",
+    "                    'cat': ['Eins','Zwei', 'Zwei', 'Zwei']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num</th>\n",
+       "      <th>string</th>\n",
+       "      <th>cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Eins</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Zwei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Zwei</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Zwei</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num string   cat\n",
+       "0    1      A  Eins\n",
+       "1    2      B  Zwei\n",
+       "2    3      C  Zwei\n",
+       "3    4      D  Zwei"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df2.columns:\n",
+    "    df2.loc[0, col] = None\n",
+    "    df2.loc[1, col] = np.nan\n",
+    "    df2.loc[2, col] = pd.NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in range(3):\n",
+    "    df2.iloc[0, col] = None\n",
+    "    df2.iloc[1, col] = np.nan\n",
+    "    df2.iloc[2, col] = pd.NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   num string   cat\n",
+      "0  NaN   None  None\n",
+      "1  NaN    NaN   NaN\n",
+      "2  NaN   <NA>  <NA>\n",
+      "3  4.0      D  Zwei\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan It's np.nan\n",
+      "nan It's np.nan\n",
+      "nan It's np.nan\n",
+      "4.0 It's another value: 4.0\n",
+      "None It's None\n",
+      "nan It's np.nan\n",
+      "<NA> It's pd.NA\n",
+      "D It's a regular string: D\n",
+      "None It's None\n",
+      "nan It's np.nan\n",
+      "<NA> It's pd.NA\n",
+      "Zwei It's a regular string: Zwei\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df2:\n",
+    "    for i in df2[col]:\n",
+    "        print(i, identify_nan_value(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check if NaN conversion successfull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -979,6 +1418,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Histplot Ewltp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1007,6 +1453,13 @@
    "source": [
     "# Quick histplot of likely target variable\n",
     "sn.histplot(x = \"Ewltp (g/km)\", data = EU_df, bins = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# dupe removal possibilites"
    ]
   },
   {
@@ -1112,7 +1565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Andi",
+   "display_name": "DS_CO2_Project",
    "language": "python",
    "name": "python3"
   },
