--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8500,7 +8500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "vsJwukPZ26y2"
       },
@@ -8538,7 +8538,7 @@
         "\n",
         "# reading the file\n",
         "\n",
-        "# df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\DataPipeline\\EU all_current_shared_preprocessed_Alex.parquet')"
+        "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\DataPipeline\\EU all_current_shared_preprocessed_Alex.parquet')"
       ]
     },
     {
@@ -8552,7 +8552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "dMczwAF_26y3",
         "outputId": "21b226d5-a750-49ae-cbc6-6d9944831055"
@@ -8591,7 +8591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "e0DEmhVe26y3",
         "outputId": "55a5e0d0-72de-4f36-9bd4-5c0483520fd1"
@@ -8656,114 +8656,78 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "k46TC-OG26y3"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Encoding, separation of target, train_test split, finally scaler\n",
-        "\n",
-        "# Identify categorical and numerical columns\n",
-        "categorical_cols = ['Country', 'Mh', 'Fm', 'Ft']\n",
-        "numerical_cols = df_r.select_dtypes(include=['float32']).columns.tolist()\n",
-        "\n",
-        "# Step 1: Encode categorical variables\n",
-        "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
-        "X_encoded = encoder.fit_transform(df_r[categorical_cols])\n",
-        "\n",
-        "# Step 2: Create a DataFrame for the encoded categorical variables\n",
-        "X_encoded_df_r = pd.DataFrame(X_encoded, columns=encoder.get_feature_names_out(categorical_cols))\n",
-        "\n",
-        "# Step 3: Combine the encoded variables with the remaining numerical variables\n",
-        "X = pd.concat([X_encoded_df_r, df_r[numerical_cols]], axis=1)  # Renamed to X\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "bs670GV026y4"
-      },
-      "outputs": [],
-      "source": [
-        "# Step 4: Separate features and target variable\n",
+        "# Step 1: Separate features and target variable\n",
         "\n",
         "y = df_r['Ewltp (g/km)']\n",
         "\n",
         "# Ensure X is based on the same DataFrame\n",
-        "X = df_r.drop(columns=['Ewltp (g/km)'])\n",
         "\n",
-        "# Step 5: Split into training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+        "X = df_r.drop(columns=['Ewltp (g/km)'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Tz-nHytT26y4",
-        "outputId": "3cfd04d2-635b-45f0-e260-a422832fc118"
-      },
-      "outputs": [
-        {
-          "ename": "KeyError",
-          "evalue": "\"['Ewltp (g/km)'] not in index\"",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[9], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Select only numerical columns from X_train and X_test\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m X_train_num \u001b[38;5;241m=\u001b[39m \u001b[43mX_train\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnumerical_cols2\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     10\u001b[0m X_test_num \u001b[38;5;241m=\u001b[39m X_test[numerical_cols2] \u001b[38;5;66;03m#Showing error is here \"['Ewltp (g/km)'] not in index\" - why? if it was already splitted before\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Apply scaling\u001b[39;00m\n",
-            "File \u001b[1;32mc:\\Users\\alexa\\anaconda3\\envs\\aug24_bds_int---co2\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
-            "File \u001b[1;32mc:\\Users\\alexa\\anaconda3\\envs\\aug24_bds_int---co2\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6200\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-            "File \u001b[1;32mc:\\Users\\alexa\\anaconda3\\envs\\aug24_bds_int---co2\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6249\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6251\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6252\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;31mKeyError\u001b[0m: \"['Ewltp (g/km)'] not in index\""
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "# Step 6: Scale the numerical variables\n",
-        "scaler = StandardScaler()\n",
-        "\n",
-        "# Select only numerical columns from X_train and X_test\n",
-        "X_train_num = X_train[numerical_cols]\n",
-        "X_test_num = X_test[numerical_cols] #Showing error is here \"['Ewltp (g/km)'] not in index\" - why? if it was already splitted before\n",
-        "\n",
-        "# Apply scaling\n",
-        "X_train_scaled = scaler.fit_transform(X_train_num)\n",
-        "X_test_scaled = scaler.transform(X_test_num)\n",
-        "\n",
-        "# Replace the numerical columns in the original X_train and X_test with the scaled versions\n",
-        "X_train[numerical_cols] = X_train_scaled\n",
-        "X_test[numerical_cols] = X_test_scaled\n",
-        "\n",
-        "# Check the shapes of the train and test sets\n",
-        "print(f\"X_train shape: {X_train.shape}, y_train shape: {y_train.shape}\")\n",
-        "print(f\"X_test shape: {X_test.shape}, y_test shape: {y_test.shape}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yoP4L-Gu26y4",
-        "outputId": "c2575203-cdf4-4386-8c5c-ebe167d969db"
-      },
+      "execution_count": 7,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Country', 'Mh', 'm (kg)', 'Mt', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)',\n",
-            "       'At2 (mm)', 'Ft', 'Fm', 'ec (cm3)', 'ep (KW)', 'year',\n",
-            "       'Fuel consumption '],\n",
-            "      dtype='object')\n"
+            "X_train shape: (1017919, 31), y_train shape: (1017919,)\n",
+            "X_test shape: (254480, 31), y_test shape: (254480,)\n"
           ]
         }
       ],
       "source": [
-        "print(df_r.columns)\n"
+        "# Step 2: Identify categorical and numerical columns\n",
+        "categorical_cols = X.select_dtypes(include=['category']).columns.tolist()  # Categorical columns\n",
+        "numerical_cols = X.select_dtypes(include=['float32']).columns.tolist()  # Numerical columns\n",
+        "\n",
+        "# Step 3: Encode categorical variables using OneHotEncoder\n",
+        "encoder = OneHotEncoder(sparse_output=False, drop='first')  # Encode and drop first to avoid multicollinearity\n",
+        "X_encoded = encoder.fit_transform(X[categorical_cols])\n",
+        "\n",
+        "# Convert encoded variables back to DataFrame\n",
+        "X_encoded_df = pd.DataFrame(X_encoded, columns=encoder.get_feature_names_out(categorical_cols))\n",
+        "\n",
+        "# Step 4: Combine encoded categorical and numerical variables\n",
+        "X_combined = pd.concat([X_encoded_df, X[numerical_cols].reset_index(drop=True)], axis=1)\n",
+        "\n",
+        "# Step 5: Split into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Step 6: Scale numerical variables using StandardScaler\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train[numerical_cols])\n",
+        "X_test_scaled = scaler.transform(X_test[numerical_cols])\n",
+        "\n",
+        "# Replace numerical columns in X_train and X_test with scaled values\n",
+        "X_train[numerical_cols] = X_train_scaled\n",
+        "X_test[numerical_cols] = X_test_scaled\n",
+        "\n",
+        "# Check the shapes of train and test sets\n",
+        "print(f\"X_train shape: {X_train.shape}, y_train shape: {y_train.shape}\")\n",
+        "print(f\"X_test shape: {X_test.shape}, y_test shape: {y_test.shape}\")\n",
+        "\n",
+        "\n",
+        "#Notes regarding the necessity to scale the target variable.\n",
+        "#For algorithms like Random Forests, Decision Trees, and Linear Regression, it’s not necessary to scale the target variable (Ewltp). \n",
+        "#However, for algorithms like Neural Networks or SVR, it might be beneficial to scale both the features and the target.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "bs670GV026y4"
+      },
+      "outputs": [],
+      "source": [
+        "\n"
       ]
     },
     {
@@ -9383,7 +9347,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "DS_CO2_Project",
+      "display_name": "aug24_bds_int---co2",
       "language": "python",
       "name": "python3"
     },
@@ -9397,7 +9361,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
