--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8721,13 +8721,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "bs670GV026y4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Squared Error (MSE): 56.62821960449219\n",
+            "R-squared (R2): 0.8493936061859131\n"
+          ]
+        }
+      ],
       "source": [
-        "\n"
+        "# Step 9: Initialize the Linear Regression model\n",
+        "lr_model = LinearRegression()\n",
+        "\n",
+        "# Step 10: Train the model\n",
+        "lr_model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "# Step 11: Make predictions on the test set\n",
+        "y_pred = lr_model.predict(X_test_scaled)\n",
+        "\n",
+        "# Step 12: Evaluate the model using MSE and R-squared\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Squared Error (MSE): {mse}\")\n",
+        "print(f\"R-squared (R2): {r2}\")"
       ]
     },
     {
@@ -8749,11 +8772,25 @@
       "source": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Feature importance"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "qtmFHuv626y5"
       },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     },
